deploy/front-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: front-app
  name: front-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front-app
      app: front-app
      tier: frontend
      track: stable
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: front-app
        app: front-app
        tier: frontend
        track: stable
    spec:
      containers:
      - image: korpulentny/smartdebt_front_app:latest
        imagePullPolicy: ""
        name: front-app
        ports:
        - containerPort: 2137
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
