deploy/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: users
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: users
      app: users
      tier: backend
      track: stable
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/smartdebt: "true"
        io.kompose.service: users
        app: users
        tier: backend
        track: stable
    spec:
      containers:
      - image: korpulentny/smartdebt_users:latest
        imagePullPolicy: ""
        name: users
        ports:
          - name: http
            containerPort: 1327
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
