deploy/debts-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: debts
  name: debts
spec:
  ports:
  - name: "2371"
    port: 2371
    targetPort: 2371
  selector:
    io.kompose.service: debts
status:
  loadBalancer: {}
