deploy/front-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: front-app
  name: front-app
spec:
  ports:
  - name: "2137"
    port: 2137
    targetPort: 2137
  selector:
    io.kompose.service: front-app
status:
  loadBalancer: {}
