deploy/front-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: front-server
  name: front-server
spec:
  ports:
  - name: "7111"
    port: 7111
    conta
    targetPort: 7111
  selector:
    io.kompose.service: front-server
  externalTrafficPolicy: Local
