deploy/psql-debts-debts-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: psql-debts-debts
  name: psql-debts-debts
spec:
  ports:
  - name: "3721"
    port: 3721
    targetPort: 5432
  selector:
    io.kompose.service: psql-debts-debts
