deploy/psql-debts-users-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: psql-debts-users
  name: psql-debts-users
spec:
  ports:
  - name: "3172"
    port: 3172
    targetPort: 5432
  selector:
    io.kompose.service: psql-debts-users
status:
  loadBalancer: {}
