deploy/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: users
  name: users
spec:
  ports:
    - protocol: TCP
      port: 1327
      targetPort: http
  selector:
    io.kompose.service: users
    app: users
    tier: backend
